--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
         <div class="number-value">7,930 Billion</div>
         <div class="value">Steps</div>
         <div class="noun">walked on Activ</div>
-        <img src="https://img.icons8.com/color/100/000000/footprints-pokemon.png" alt="footprint" id="fire" >
+        <img src="https://img.icons8.com/color/100/000000/footprints-pokemon.png" alt="footprint" >
       </div>
 
       <div class="col-sm-3">
         <div class="number-value">148,405</div> 
         <div class="value">Times</div>
         <div class="noun">around the globe</div>
-        <img src="https://img.icons8.com/officel/100/000000/earth-planet.png" alt="earth"/>
+        <img src="https://img.icons8.com/officel/100/000000/earth-planet.png" alt="earth" id="earth" >
       </div>
 
       <div class="col-sm-3">
