--- a/followus.html
+++ b/followus.html
@@ -138,9 +138,14 @@
       </div>
 
     </div>
+    <script>
+      function submitForm(){
+        alert("Your enquiry has been submitted.")
+      }
+    </script>
 
     <div class="col-sm-7">
-      <form id="contact-form">
+      <form id="contact-form" onsubmit="submitForm()">
         <h3 class="text-danger">Send us a message</h3> 
         <div class="container pl-2">
       
